# pyfreak

./: ,gitignore  README.md  pyproject.toml
pyfreak/: __init__.py
